[tool.poetry]
name = "leap-quant"
version = "0.1.0"
description = "First version of domain 2 and 3 analysis"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
pytest = "^8.1.1"
pytest-watch = "^4.2.0"
ruff = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
